[package]
name = "zipfs"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
lunchbox = { version = "0.1", default-features = false }
async-trait = "0.1"

# async_zip 0.0.10 has not been released yet.
# Also, some necessary features haven't yet been merged into the main repo
async_zip = {git = "https://github.com/VivekPanyam/rs-async-zip", branch = "from_parts", features = ["chrono", "crc", "deflate", "zstd"]}
pin-project = "1"
path-clean = "0.1"