[package]
name = "zipfs"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
lunchbox = { version = "0.1", default-features = false }
async-trait = "0.1"
async_zip = {version = "0.0.10", features = ["chrono", "deflate", "zstd"]}
pin-project = "1"
path-clean = "0.1"