[package]
name = "zipfs"
version = "0.0.2"
edition = "2021"
authors = ["Vivek Panyam <hello@vivekpanyam.com>"]
description = "An async filesystem on top of Zip files."
license = "Apache-2.0"
repository = "https://github.com/vivekpanyam/ZipFS"
keywords = ["filesystem", "vfs", "async", "zip", "lunchbox"]
categories = ["filesystem", "asynchronous", "compression"]

[dependencies]
tokio = { version = "1", features = ["io-util"] }
lunchbox = { version = "0.1", default-features = false }
async-trait = "0.1"
async_zip = {version = "0.0.1", features = ["chrono", "deflate", "zstd"], package = "async_zip2"}
pin-project = "1"
path-clean = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["io-util", "fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
